feat: adicionando endpointde delete dos usuários e produtos
